[gd_scene load_steps=2 format=3 uid="uid://c6nu6ogbqunsy"]

[ext_resource type="Script" uid="uid://dyd7wt0b0ejj6" path="res://Scenes/UI/map_select.gd" id="1_f1pey"]

[node name="MapSelect" type="Node2D"]
script = ExtResource("1_f1pey")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MapsBox" type="VBoxContainer" parent="CanvasLayer"]
offset_left = 51.0
offset_top = 46.0
offset_right = 156.0
offset_bottom = 101.0

[node name="Map1Button" type="Button" parent="CanvasLayer/MapsBox"]
layout_mode = 2
text = "Map 1"

[node name="Home1Button" type="Button" parent="CanvasLayer/MapsBox"]
layout_mode = 2
text = "Home 1"

[connection signal="pressed" from="CanvasLayer/MapsBox/Map1Button" to="." method="_on_map_1_button_pressed"]
[connection signal="pressed" from="CanvasLayer/MapsBox/Home1Button" to="." method="_on_home_1_button_pressed"]
